--- a/index.html
+++ b/index.html
@@ -9,27 +9,55 @@
 
     <!-- Reset CSS -->
     <link rel="stylesheet" href="Assets/reset.css">
-
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <!-- Fontawesome and Googlefonts -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+
+    <!--Override Styling-->
+    <link rel="stylesheet" href="Assets/style.css">
 
 </head>
 
 <body>
+    <div class="container-fluid">
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-        crossorigin="anonymous"></script>
+        <div class="row">
+            <div class="col-sm-8">
+                <header class="jumbotron">
+                    <h1 class="display-3">Work Day Scheduler</h1>
+                    <p class="lead">A simple calendar app for scheduling your work day</p>
+                    <p id="currentDay" class="lead"></p>
+                </header>
+            </div>
+        </div>
+
+        <div class="row justify-content-center">
+            <div class="col-sm-8">
+                <div id=" hours-box">
+                    <div class="hours justify-content-center"><span id=agendaItem>What's on your agenda?</span> <button
+                            type="button" class="btn btn-default btn-sm">
+                            <span class="glyphicon glyphicon-pushpin"></span> Pushpin
+                        </button></div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- jQuery, Moment, Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+
+    <!-- Main Dayplanner JS -->
     <script src="dayplanner.js"></script>
+
 </body>
 
 </html>
