--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Reset CSS -->
-    <link rel="stylesheet" href="Assets/reset.css">
+    <link rel="stylesheet" href="Assets/css/reset.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -16,36 +16,31 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
         integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
-
     <!--Override Styling-->
-    <link rel="stylesheet" href="Assets/style.css">
+    <link rel="stylesheet" href="Assets//css/style.css">
 
 </head>
 
 <body>
     <div class="container-fluid">
+        <!-- <div class="row justify-content-center"> -->
+        <!-- <div class="col-sm-8 justify-content-center"> -->
+        <header class="jumbotron">
+            <h1 class="display-3">Work Day Scheduler</h1>
+            <p class="lead">A simple calendar app for scheduling your work day</p>
+            <p id="currentDay" class="lead"></p>
+        </header>
+    </div>
+    </div>
 
-        <div class="row">
-            <div class="col-sm-8">
-                <header class="jumbotron">
-                    <h1 class="display-3">Work Day Scheduler</h1>
-                    <p class="lead">A simple calendar app for scheduling your work day</p>
-                    <p id="currentDay" class="lead"></p>
-                </header>
-            </div>
-        </div>
+    <!-- <div class="row justify-content-center">
+        <div class="col-sm-8"> -->
+    <div id=" hours-box">
 
-        <div class="row justify-content-center">
-            <div class="col-sm-8">
-                <div id=" hours-box">
-                    <div class="hours justify-content-center"><span id=agendaItem>What's on your agenda?</span> <button
-                            type="button" class="btn btn-default btn-sm">
-                            <span class="glyphicon glyphicon-pushpin"></span> Pushpin
-                        </button></div>
 
-                </div>
-            </div>
-        </div>
+    </div>
+    </div>
+    </div>
     </div>
 
     <!-- jQuery, Moment, Bootstrap JS -->
@@ -56,7 +51,7 @@
         crossorigin="anonymous"></script>
 
     <!-- Main Dayplanner JS -->
-    <script src="dayplanner.js"></script>
+    <script src="/Assets/javascript/dayplanner.js"></script>
 
 </body>
 
