updated index.html containers

--- a/index.html
+++ b/index.html
@@ -23,26 +23,29 @@
 
 <body>
     <div class="container-fluid">
-        <!-- <div class="row justify-content-center"> -->
-        <!-- <div class="col-sm-8 justify-content-center"> -->
         <header class="jumbotron">
             <h1 class="display-3">Work Day Scheduler</h1>
             <p class="lead">A simple calendar app for scheduling your work day</p>
             <p id="currentDay" class="lead"></p>
         </header>
     </div>
-    </div>
 
-    <!-- <div class="row justify-content-center">
-        <div class="col-sm-8"> -->
-    <div id=" hours-box">
+    <div class="container">
+        <div class="row justify-content-center">
 
+            <div class="col-sm-2" id="-box">
+                <div class="timeRow time-block hour"></div>
+            </div>
 
-    </div>
-    </div>
-    </div>
-    </div>
+            <div class="col-sm-8" id="agenda-box">
+            </div>
 
+            <div class="col-sm-2" id="save-box">
+                <button class="timeRow saveBtn"></button>
+            </div>
+
+        </div>
+    </div>
     <!-- jQuery, Moment, Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
