--- a/index.html
+++ b/index.html
@@ -1,61 +1,155 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <title>Simple Day Planner</title>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- Reset CSS -->
     <link rel="stylesheet" href="Assets/css/reset.css">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- Fontawesome and Googlefonts -->
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
-    <!--Override Styling-->
-    <link rel="stylesheet" href="Assets//css/style.css">
 
+    <!-- Bootstrap and FontAwesome -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+        integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="Assets/css/style.css">
+
+    <title>Simple Day Planner</title>
 </head>
 
 <body>
-    <div class="container-fluid">
-        <header class="jumbotron">
-            <h1 class="display-3">Work Day Scheduler</h1>
-            <p class="lead">A simple calendar app for scheduling your work day</p>
-            <p id="currentDay" class="lead"></p>
-        </header>
-    </div>
+    <header class="jumbotron">
+        <h1 class="display-3">Work Day Scheduler</h1>
+        <p class="lead">A simple calendar app for scheduling your work day</p>
+        <p id="currentDay" class="lead"></p>
+    </header>
 
+    <!-- Main Container -->
     <div class="container">
-        <div class="row justify-content-center">
 
-            <div class="col-sm-2" id="-box">
-                <div class="timeRow time-block hour"></div>
+        <div id="hour-8" data-hour="8" class="row past time-block">
+            <div class="col-md-1 hour">
+                08:00
             </div>
-
-            <div class="col-sm-8" id="agenda-box">
-            </div>
-
-            <div class="col-sm-2" id="save-box">
-                <button class="timeRow saveBtn"></button>
-            </div>
-
+            <textarea class="col-md-10 description">
+              </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
-    </div>
-    <!-- jQuery, Moment, Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-        crossorigin="anonymous"></script>
 
-    <!-- Main Dayplanner JS -->
-    <script src="/Assets/javascript/dayplanner.js"></script>
+        <div id="hour-9" data-hour="9" class="row past time-block">
+            <div class="col-md-1 hour">
+                09:00
+            </div>
+            <textarea class="col-md-10 description">
+      </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
 
+        <div id="hour-10" data-hour="10" class="row past time-block">
+            <div class="col-md-1 hour">
+                10:00
+            </div>
+            <textarea class="col-md-10 description">
+      </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+
+        <div id="hour-11" data-hour="11" class="row time-block">
+            <div class="col-md-1 hour">
+                11:00
+            </div>
+            <textarea class="col-md-10 description">
+      </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+
+        <div id="hour-12" data-hour="12" class="row time-block">
+            <div class="col-md-1 hour">
+                12:00
+            </div>
+            <textarea class="col-md-10 description">
+      </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+
+        <div id="hour-13" data-hour="13" class="row time-block">
+            <div class="col-md-1 hour">
+                13:00
+            </div>
+            <textarea class="col-md-10 description">
+      </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+
+        <div id="hour-14" data-hour="14" class="row time-block">
+            <div class="col-md-1 hour">
+                14:00
+            </div>
+            <textarea class="col-md-10 description">
+      </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+
+        <div id="hour-15" data-hour="15" class="row time-block">
+            <div class="col-md-1 hour">
+                15:00
+            </div>
+            <textarea class="col-md-10 description">
+      </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+
+        <div id="hour-16" data-hour="16" class="row time-block">
+            <div class="col-md-1 hour">
+                16:00
+            </div>
+            <textarea class="col-md-10 description">
+      </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+
+        <div id="hour-17" data-hour="17" class="row time-block">
+            <div class="col-md-1 hour">
+                17:00
+            </div>
+            <textarea class="col-md-10 description">
+      </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+
+        <div id="hour-18" data-hour="18" class="row time-block">
+            <div class="col-md-1 hour">
+                18:00
+            </div>
+            <textarea class="col-md-10 description">
+          </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+
+        <div id="hour-19" data-hour="19" class="row time-block">
+            <div class="col-md-1 hour">
+                19:00
+            </div>
+            <textarea class="col-md-10 description">
+              </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+
+        <div id="hour-20" data-hour="20" class="row time-block">
+            <div class="col-md-1 hour">
+                20:00
+            </div>
+            <textarea class="col-md-10 description">
+                  </textarea>
+            <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+        </div>
+
+        <!-- JQuery, Moment.js and Main Dayplanner.JS -->
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+        <script src="Assets/javascript/dayplanner.js"></script>
 </body>
 
 </html>
