--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 
 <body>
     <header class="jumbotron">
-        <h1 class="display-3">Work Day Scheduler</h1>
-        <p class="lead">A simple calendar app for scheduling your work day</p>
+        <h1 class="display-3">Simple Day Planner</h1>
+        <p class="lead">a simple time block calendar app for scheduling your day</p>
+        <br>
         <p id="currentDay" class="lead"></p>
     </header>
 
@@ -30,119 +31,80 @@
     <div class="container">
 
         <div id="hour-8" data-hour="8" class="row past time-block">
-            <div class="col-md-1 hour">
-                08:00
-            </div>
-            <textarea class="col-md-10 description">
-              </textarea>
+            <div class="col-md-1 hour">08:00</div>
+            <textarea data-task="8" class="col-md-10 text-center description"></textarea>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
 
         <div id="hour-9" data-hour="9" class="row past time-block">
-            <div class="col-md-1 hour">
-                09:00
-            </div>
-            <textarea class="col-md-10 description">
-      </textarea>
+            <div class="col-md-1 hour">09:00</div>
+            <textarea data-task="9" class="col-md-10 text-center description"></textarea>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
 
         <div id="hour-10" data-hour="10" class="row past time-block">
-            <div class="col-md-1 hour">
-                10:00
-            </div>
-            <textarea class="col-md-10 description">
-      </textarea>
+            <div class="col-md-1 hour">10:00</div>
+            <textarea data-task="10" class="col-md-10 text-center description"></textarea>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
 
         <div id="hour-11" data-hour="11" class="row time-block">
-            <div class="col-md-1 hour">
-                11:00
-            </div>
-            <textarea class="col-md-10 description">
-      </textarea>
+            <div class="col-md-1 hour">11:00</div>
+            <textarea data-task="11" class="col-md-10 text-center description"></textarea>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
 
         <div id="hour-12" data-hour="12" class="row time-block">
-            <div class="col-md-1 hour">
-                12:00
-            </div>
-            <textarea class="col-md-10 description">
-      </textarea>
+            <div class="col-md-1 hour">12:00</div>
+            <textarea data-task="12" class="col-md-10 text-center description"></textarea>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
 
         <div id="hour-13" data-hour="13" class="row time-block">
-            <div class="col-md-1 hour">
-                13:00
-            </div>
-            <textarea class="col-md-10 description">
-      </textarea>
+            <div class="col-md-1 hour">13:00</div>
+            <textarea data-task="13" class="col-md-10 text-center description"></textarea>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
 
         <div id="hour-14" data-hour="14" class="row time-block">
-            <div class="col-md-1 hour">
-                14:00
-            </div>
-            <textarea class="col-md-10 description">
-      </textarea>
+            <div class="col-md-1 hour">14:00</div>
+            <textarea id="task-14" class="col-md-10 text-center description"></textarea>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
 
         <div id="hour-15" data-hour="15" class="row time-block">
-            <div class="col-md-1 hour">
-                15:00
-            </div>
-            <textarea class="col-md-10 description">
-      </textarea>
+            <div class="col-md-1 hour">15:00</div>
+            <textarea data-task="15" class="col-md-10 text-center description"></textarea>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
 
         <div id="hour-16" data-hour="16" class="row time-block">
-            <div class="col-md-1 hour">
-                16:00
-            </div>
-            <textarea class="col-md-10 description">
-      </textarea>
+            <div class="col-md-1 hour">16:00</div>
+            <textarea data-task="16" class="col-md-10 text-center description"></textarea>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
 
         <div id="hour-17" data-hour="17" class="row time-block">
-            <div class="col-md-1 hour">
-                17:00
-            </div>
-            <textarea class="col-md-10 description">
-      </textarea>
+            <div class="col-md-1 hour">17:00</div>
+            <textarea data-task="17" class="col-md-10 text-center description"></textarea>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
 
         <div id="hour-18" data-hour="18" class="row time-block">
-            <div class="col-md-1 hour">
-                18:00
-            </div>
-            <textarea class="col-md-10 description">
-          </textarea>
+            <div class="col-md-1 hour">18:00</div>
+            <textarea data-task="18" class="col-md-10 text-center description"></textarea>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
 
         <div id="hour-19" data-hour="19" class="row time-block">
-            <div class="col-md-1 hour">
-                19:00
-            </div>
-            <textarea class="col-md-10 description">
-              </textarea>
+            <div class="col-md-1 hour">19:00</div>
+            <textarea data-task="18" class="col-md-10 text-center description"></textarea>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
 
         <div id="hour-20" data-hour="20" class="row time-block">
-            <div class="col-md-1 hour">
-                20:00
-            </div>
-            <textarea class="col-md-10 description">
-                  </textarea>
+            <div class="col-md-1 hour">20:00</div>
+            <textarea data-task="20" class="col-md-10 text-center description"></textarea>
             <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
         </div>
 
